--- a/api/package.json
+++ b/api/package.json
@@ -1,24 +1,17 @@
 {
   "name": "cookiecloud-api",
   "version": "1.0.0",
-  "description": "CookieCloud API Server",
+  "description": "CookieCloud API Server (Cloudflare Workers)",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "wrangler dev",
+    "deploy": "wrangler deploy"
   },
   "dependencies": {
-    "body-parser": "^1.20.1",
-    "compression": "^1.7.4",
-    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.5.0",
-    "multer": "^1.4.5-lts.1",
-    "path": "^0.12.7",
-    "winston": "^3.11.0"
+    "hono": "^4.11.1"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "wrangler": "^4.54.0"
   }
 }
